# cumulus-postworkflow-normalizer

./: CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: .release-created.yml  build.yml
cumulus_postworkflow_normalizer/: lambda_handler.py
terraform/: lambda.tf  main.tf  output.tf  variable.tf
tests/: test_cumulus_postworkflow_normalizer.py  test_cumulus_postworkflow_normalizer_no_type.py
