[tool.poetry]
name = "cumulus-postworkflow-normalizer"
version = "0.4.0a1"
description = ""
authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.jpl.nasa.gov/podaac/cumulus-postworkflow-normalizer"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = ['contrib', 'docs', 'tests']

[tool.poetry.dependencies]
python = "^3.11"
cumulus-process = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
pylint = "^3.0.2"
moto = "^4.2.11"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
