[tool.poetry]
name = "cumulus-postworkflow-normalizer"
version = "0.4.1rc2"
description = ""
authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.jpl.nasa.gov/podaac/cumulus-postworkflow-normalizer"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = ['contrib', 'docs', 'tests']

[tool.poetry.dependencies]
python = "^3.11"
cumulus-process = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"
flake8 = "^7.0.0"
pylint = "^3.2.2"
moto = "^5.0.7"
pytest-dotenv = "^0.5.2"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
