[tool.poetry]
name = "cumulus-postworkflow-normalizer"
version = "0.6.0a2"
description = ""
authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.jpl.nasa.gov/podaac/cumulus-postworkflow-normalizer"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = ['contrib', 'docs', 'tests']

[tool.poetry.dependencies]
python = "^3.12"
cumulus-process = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^9.0.0"
flake8 = "^7.0.0"
pylint = "^4.0.0"
moto = "^5.0.7"
pytest-dotenv = "^0.5.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
